add basic boiler plate (buttons and slider)

--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     <script src="index.js"></script>
     <div class="top">
         <button>Bubble Sort</button>
+        <button>Merge Sort</button>
     </div>
     <div class="mid"></div>
-    <div class="bottom"></div>
+    <div class="bottom">
+        <input type="range" class="slider" value="50" min="10" max="100" oninput="this.nextElementSibling.value = this.value">
+        <output>50</output>
+
+    </div>
 </body>
 </html>
