--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="index.js"></script>
     <div class="top">
         <button>Bubble Sort</button>
         <button>Merge Sort</button>
     </div>
-    <div class="mid"></div>
+    <div class="mid">
+        <label id="display">1</label>
+    </div>
     <div class="bottom">
-        <input type="range" class="slider" value="50" min="10" max="100" oninput="this.nextElementSibling.value = this.value">
-        <output>50</output>
+        <input id="size" type="range" class="slider" value="50" min="10" max="100" oninput="setSize(this.value)">
+        <output id="sliderVal">50</output>
 
     </div>
+    <script defer src="index.js"></script>
 </body>
 </html>
