--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <button>Raidx Sort</button>
     </div>
     <div class="mid">
-        <canvas id="area" width="200" height="100"></canvas>
+        <canvas id="area"></canvas>
         <label id="display">1</label>
     </div>
     <div class="bottom">
